# django-with-s3-bucket

./: README.md  docker-compose.yml
app/: .env-sample  Dockerfile  pyproject.toml  setup_django.sh
app/app_django/: asgi.py  settings.py  urls.py  wsgi.py
app/core/: admin.py  models.py  views.py
app/core/migrations/: 0001_initial.py
app/core/templates/: upload.html
nginx/: Dockerfile  nginx.conf
