[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Renan Santana <renan_ota@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-storages = "^1.12.3"
boto3 = "^1.23.1"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
python-decouple = "^3.6"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
